--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,9 @@ python-dotenv>=1.0.0
 pyyaml>=6.0
 tqdm>=4.66.0
 
+# Streamlit dashboard
+streamlit>=1.28.0
+
 # Testing & quality
 pytest>=7.4.0
 black>=23.7.0
